compiler/testData/diagnostics/tests/scopes/ImportsUselessSimpleImport.kt
package a

import <!USELESS_SIMPLE_IMPORT!>a<!>

object B {}
